--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://julyshi.github.io/Blogs"
 
 # About/contact
 owner: 
-  name: "July"
+  name: "七姑娘"
   email: julyfly321520@163.com
   bio: "七姑娘日记"
 
