--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ defaults:
 comments :
   provider : disqus
   duoshuo :
-    short_name : cnfeat
+    short_name :
   disqus :
-      short_name : cnfeat
+      short_name :
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-80884545-1
