--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 七姑娘手记
 header-img: "img/Home.jpg"
 tagline: "cn"  
 description: "七姑娘|七姑娘手记"
-baseurl: "/Blogs"
+baseurl: ""
 url: "https://julyshi.github.io/Blogs"
 
 # About/contact
