--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ header-img: "img/Home.jpg"
 tagline: "cn"  
 description: "七姑娘|七姑娘手记"
 baseurl: ""
-url: "https://julyshi.github.io/Blogs"
+url: "https://julyshi.github.io"
 
 # About/contact
 owner: 
