add Baidu Share

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "https://julysxy.com"
 owner: 
   name: "七姑娘"
   email: julyfly321520@163.com
-  bio: "七姑娘日記"
+  bio: "七姑娘手記"
 
 # Data
 gavatar: img/favicon.png
