add header image

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ github_username: JulyShi
 facebook_username: 
 weibo_username:
 zhihu_username:
+linkedin_username:
 
 # Build settings  
 # use Github Flavored Markdown !important  
