refactor the footer and about page

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ twitter_username:
 github_username: JulyShi
 facebook_username: 
 weibo_username:
-zhihu_username:
+zhihu_username: julysxy
 linkedin_username:
+tw_username: shixiangyang
 
 # Build settings  
 # use Github Flavored Markdown !important  
