--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-less": "~0.11.4",
     "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "simple-jekyll-search": "^1.5.0"
   },
   "repository": {
     "type": "git",
