--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ github_username: JulyShi
 facebook_username: 
 weibo_username:
 zhihu_username: julysxy
-linkedin_username: shixiangyang
+linkedin_username: Shi Xiangyang
 tw_username: shixiangyang
 
 # Build settings  
